--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h1>PAGINA DE MARTA</h1>
     <h2>MENU</h2>
     <ul>
-        <li><a href="index.html">Pagina responsive</a></li>
+        <li><a href=".index.html">Pagina responsive</a></li>
     </ul>
     
 </body>
